2008-09-28 Og Maciel <ogmaciel@gnome.org>

	* src/gui/widgets/timeline.py: More keyboard shortcuts added, such as zoom in/out.

2008-09-27 Og Maciel <ogmaciel@gnome.org>

	* src/gui/adddialog.py: Allow bills to have a null amount. Fixes Bug #551953.
	* src/gui/widgets/charting.py: Display 2 decimal places for labels. Fixes Bug #551953.
	* src/gui/widgets/viewbill.py: Allow null values for amountDue. Fixes Bug #551953.
	* src/lib/actions.py: Handle null values, returning a zero where needed. Fixes Bug #551953.
	* src/gui/widgets/timeline.py: Added new timeline widget.
	* data/Makefile.am: Make sure that gconf is run (if available) and register schema.
	Partially fixes Bug #553694.

2008-09-26 Og Maciel <ogmaciel@gnome.org>

	* src/lib/common.py: datadir variable is no longer hard coded.
	* src/lib/Makefile.am: Fixes Bug #553890 to get datadir from configuration step.
	* src/lib/defs.py.in: datadir is derived during build time.

2008-09-25 Og Maciel <ogmaciel@gnome.org>

	* src/db/billstable.py: Bump version and make amountDue optional.
	* src/lib/dal.py: Validating that the tables update routine does its job.

2008-09-24 Og Maciel <ogmaciel@gnome.org>

	* src/gui/widgets/calendarwidget.py: Added mnemonics.
	* src/gui/widgets/genericlistview.py: Added a filter.
	* src/gui/widgets/SearchEntry.py: Borrowed code to add smart filtering capabilities.
	* src/gui/widgets/Makefile.am: Added missing and new files.
	* src/gui/maindialog.py: Added the new filtering widget.
	* src/daemon/alarm.py, dbus_manager.py: Added new method call to dbus.
	* src/lib/actions.py, dbus_actions.py: Fixed new methods to be dbus aware.

2008-09-23 Og Maciel <ogmaciel@gnome.org>

	* src/gui/widgets/calendarwidget.py: New calendaring widget for the main dialog.
	* src/gui/widgets/chartwidget.py: New charting widget.
	* src/gui/widgets/charting.py: Charting library based off the hamster-applet.
	* src/gui/maindialog.py: Added new calendar and chart widget.